--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,8599],[[4,5,6,0,[],[0,33,8563],[[7,8,9,0,[],[0,41,8550],[],[[10,0,0,[],[0,344,8244,11],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,26868],[],[[4,0,0,[],[1,477,26388],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*ProjetoAutomacao","*C:\\ProjetoAutomacao","*..","*Cenarios","*C:\\ProjetoAutomacao\\Cenarios","*../Cenarios","*MinhaLoja","*C:\\ProjetoAutomacao\\Cenarios\\MinhaLoja.robot","*../Cenarios/MinhaLoja.robot","*CT01 - Minha loja","*Setup failed:\nExecution terminated by signal\n\nAlso teardown failed:\nNo application is open"]);
+window.output["strings"] = window.output["strings"].concat(["*","*MinhaLoja","*C:\\AuTONmação\\Cenarios\\MinhaLoja.robot","*../Cenarios/MinhaLoja.robot","*CT01 - Realizar login e abrir o minha loja"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:09","fail":1,"id":"s1","label":"ProjetoAutomacao","name":"ProjetoAutomacao","pass":0,"skip":0},{"elapsed":"00:00:09","fail":1,"id":"s1-s1","label":"ProjetoAutomacao.Cenarios","name":"Cenarios","pass":0,"skip":0},{"elapsed":"00:00:09","fail":1,"id":"s1-s1-s1","label":"ProjetoAutomacao.Cenarios.MinhaLoja","name":"MinhaLoja","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:26","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:27","fail":0,"id":"s1","label":"MinhaLoja","name":"MinhaLoja","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1682515615040;
+window.output["baseMillis"] = 1682542681081;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8614;
+window.output["generated"] = 26880;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
