--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,26868],[],[[4,0,0,[],[1,477,26388],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,40246],[],[[4,0,0,[],[1,231,40014],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*MinhaLoja","*C:\\AuTONmação\\Cenarios\\MinhaLoja.robot","*../Cenarios/MinhaLoja.robot","*CT01 - Realizar login e abrir o minha loja"]);
+window.output["strings"] = window.output["strings"].concat(["*","*MinhaLoja","*C:\\AuTONmação\\Cenarios\\MinhaLoja.robot","*../Cenarios/MinhaLoja.robot","*CT01 - Cadastro de novo produto sem foto no minha loja"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:26","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:27","fail":0,"id":"s1","label":"MinhaLoja","name":"MinhaLoja","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:40","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:40","fail":0,"id":"s1","label":"MinhaLoja","name":"MinhaLoja","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1682542681081;
+window.output["baseMillis"] = 1682655535515;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 26880;
+window.output["generated"] = 40261;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
