--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,40246],[],[[4,0,0,[],[1,231,40014],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,105784],[],[[4,0,0,[5],[1,460,105322],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*MinhaLoja","*C:\\AuTONmação\\Cenarios\\MinhaLoja.robot","*../Cenarios/MinhaLoja.robot","*CT01 - Cadastro de novo produto sem foto no minha loja"]);
+window.output["strings"] = window.output["strings"].concat(["*","*LinkPagamento","*C:\\AuTONmação\\Cenarios\\LinkPagamento.robot","*../Cenarios/LinkPagamento.robot","*CT03 - Encerramento do link de pagamento","*cancelamento"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:40","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:40","fail":0,"id":"s1","label":"MinhaLoja","name":"MinhaLoja","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:45","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:01:45","fail":0,"label":"cancelamento","pass":1,"skip":0}],[{"elapsed":"00:01:46","fail":0,"id":"s1","label":"LinkPagamento","name":"LinkPagamento","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1682655535515;
+window.output["baseMillis"] = 1686084781489;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 40261;
+window.output["generated"] = 105817;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
